{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 390,
  "lineage": "a276e195-9fa3-e5da-21de-71b410c228f8",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/98f507c0-88e9-4044-88ec-0507ce9eae6b/resourceGroups/rg-local/providers/Microsoft.Network/networkInterfaces/NIC-APP",
            "internal_domain_name_suffix": "ste135fhtjculah30yp1m2u3oa.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig-app",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/98f507c0-88e9-4044-88ec-0507ce9eae6b/resourceGroups/rg-local/providers/Microsoft.Network/publicIPAddresses/meuPublicIP-APP",
                "subnet_id": "/subscriptions/98f507c0-88e9-4044-88ec-0507ce9eae6b/resourceGroups/rg-local/providers/Microsoft.Network/virtualNetworks/vnet-local/subnets/SUB-APP"
              }
            ],
            "location": "eastus",
            "name": "NIC-APP",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "rg-local",
            "tags": {
              "ambiente": "saa"
            }
          },
          "dependencies": [
            "azurerm_public_ip.publicip-app",
            "azurerm_resource_group.local",
            "azurerm_subnet.subnet-app",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic-db",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/98f507c0-88e9-4044-88ec-0507ce9eae6b/resourceGroups/rg-local/providers/Microsoft.Network/networkInterfaces/NIC-DB",
            "internal_domain_name_suffix": "ste135fhtjculah30yp1m2u3oa.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig-db",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/98f507c0-88e9-4044-88ec-0507ce9eae6b/resourceGroups/rg-local/providers/Microsoft.Network/publicIPAddresses/meuPublicIP-DB",
                "subnet_id": "/subscriptions/98f507c0-88e9-4044-88ec-0507ce9eae6b/resourceGroups/rg-local/providers/Microsoft.Network/virtualNetworks/vnet-local/subnets/SUB-DB"
              }
            ],
            "location": "eastus",
            "name": "NIC-DB",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "rg-local",
            "tags": {
              "ambiente": "saa"
            }
          },
          "dependencies": [
            "azurerm_public_ip.publicip-db",
            "azurerm_resource_group.local",
            "azurerm_subnet.subnet-db",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/98f507c0-88e9-4044-88ec-0507ce9eae6b/resourceGroups/rg-local/providers/Microsoft.Network/networkSecurityGroups/NSG-local",
            "location": "eastus",
            "name": "NSG-local",
            "resource_group_name": "rg-local",
            "security_rule": [],
            "tags": {
              "ambiente": "saa"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.local",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rdp-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/98f507c0-88e9-4044-88ec-0507ce9eae6b/resourceGroups/rg-local/providers/Microsoft.Network/networkSecurityGroups/NSG-local/securityRules/AllowRDP",
            "name": "AllowRDP",
            "network_security_group_name": "NSG-local",
            "priority": 300,
            "protocol": "Tcp",
            "resource_group_name": "rg-local",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "0.0.0.0/0"
            ],
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.local",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "publicip-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/98f507c0-88e9-4044-88ec-0507ce9eae6b/resourceGroups/rg-local/providers/Microsoft.Network/publicIPAddresses/meuPublicIP-APP",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "meuPublicIP-APP",
            "resource_group_name": "rg-local",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "publicip-db",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/98f507c0-88e9-4044-88ec-0507ce9eae6b/resourceGroups/rg-local/providers/Microsoft.Network/publicIPAddresses/meuPublicIP-DB",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "meuPublicIP-DB",
            "resource_group_name": "rg-local",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.local"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/98f507c0-88e9-4044-88ec-0507ce9eae6b/resourceGroups/rg-local/providers/Microsoft.Network/virtualNetworks/vnet-local/subnets/SUB-APP",
            "name": "SUB-APP",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-local",
            "virtual_network_name": "vnet-local"
          },
          "dependencies": [
            "azurerm_resource_group.local",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet-db",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/98f507c0-88e9-4044-88ec-0507ce9eae6b/resourceGroups/rg-local/providers/Microsoft.Network/virtualNetworks/vnet-local/subnets/SUB-DB",
            "name": "SUB-DB",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-local",
            "virtual_network_name": "vnet-local"
          },
          "dependencies": [
            "azurerm_resource_group.local",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "subnet-app-nsg-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/98f507c0-88e9-4044-88ec-0507ce9eae6b/resourceGroups/rg-local/providers/Microsoft.Network/virtualNetworks/vnet-local/subnets/SUB-APP",
            "network_security_group_id": "/subscriptions/98f507c0-88e9-4044-88ec-0507ce9eae6b/resourceGroups/rg-local/providers/Microsoft.Network/networkSecurityGroups/NSG-local",
            "subnet_id": "/subscriptions/98f507c0-88e9-4044-88ec-0507ce9eae6b/resourceGroups/rg-local/providers/Microsoft.Network/virtualNetworks/vnet-local/subnets/SUB-APP"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.local",
            "azurerm_subnet.subnet-app",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "subnet-db-nsg-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/98f507c0-88e9-4044-88ec-0507ce9eae6b/resourceGroups/rg-local/providers/Microsoft.Network/virtualNetworks/vnet-local/subnets/SUB-DB",
            "network_security_group_id": "/subscriptions/98f507c0-88e9-4044-88ec-0507ce9eae6b/resourceGroups/rg-local/providers/Microsoft.Network/networkSecurityGroups/NSG-local",
            "subnet_id": "/subscriptions/98f507c0-88e9-4044-88ec-0507ce9eae6b/resourceGroups/rg-local/providers/Microsoft.Network/virtualNetworks/vnet-local/subnets/SUB-DB"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.local",
            "azurerm_subnet.subnet-db",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "fcbec994-9aa7-4545-80fd-d61fb6729d70",
            "id": "/subscriptions/98f507c0-88e9-4044-88ec-0507ce9eae6b/resourceGroups/rg-local/providers/Microsoft.Network/virtualNetworks/vnet-local",
            "location": "eastus",
            "name": "vnet-local",
            "resource_group_name": "rg-local",
            "tags": {
              "ambiente": "saa"
            }
          },
          "dependencies": [
            "azurerm_resource_group.local"
          ]
        }
      ]
    }
  ]
}